tests/ui/type-alias-impl-trait/in-assoc-ty-early-bound2.stderr
error[E0700]: hidden type for `<() as Foo>::Assoc<'a>` captures lifetime that does not appear in bounds
  --> $DIR/in-assoc-ty-early-bound2.rs:15:20
   |
LL |     type Assoc<'a> = impl Sized;
   |                      ---------- opaque type defined here
LL |     fn bar<'a: 'a>()
   |            -- hidden type `&'a ()` captures the lifetime `'a` as defined here
...
LL |             let _: Self::Assoc<'a> = x;
   |                    ^^^^^^^^^^^^^^^

error: method must define opaque type
  --> $DIR/in-assoc-ty-early-bound2.rs:9:22
   |
LL |       type Assoc<'a> = impl Sized;
   |                        ^^^^^^^^^^
LL | /     fn bar<'a: 'a>()
LL | |     where
LL | |         Self::Assoc<'a>:,
   | |_________________________- because it shows up in the args of this method

error: unconstrained opaque type
  --> $DIR/in-assoc-ty-early-bound2.rs:9:22
   |
LL |     type Assoc<'a> = impl Sized;
   |                      ^^^^^^^^^^
   |
   = note: `Assoc` must be used in combination with a concrete type within the same impl

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0700`.
